# bchain

./: .env  .gitignore  Cargo.toml  README.md  build.rs  raskey.pem  rustfmt.toml
.github/workflows/: rust.yml
chain/: Cargo.toml
chain/src/: address.rs  block.rs  cli.rs  error.rs  hash_digest.rs  lib.rs  public_key.rs  result.rs  signature.rs  tx.rs  wallet.rs
db/: Cargo.toml
db/src/: database.rs  lib.rs  raw_block.rs
domain/: Cargo.toml
domain/src/: address.rs  block.rs  cli.rs  lib.rs  public_key.rs  signature.rs  tx.rs  tx_pool.rs  wallet.rs
migrations/2021-08-07-141542_create_blocks/: up.sql
network/: Cargo.toml  mod.rs  protocol.rs
network/src/: lib.rs  mine.rs  network.rs  node.rs  protocol.rs  swarm.rs  user_command.rs
network/src/commands/: balance.rs  blocks.rs  bootstrap.rs  dial.rs  help.rs  message.rs  mod.rs  peers.rs  tx.rs
proto/: calculator.proto  peerfinder.proto
src/: calc.rs  cli.rs  connection.rs  diesel.rs  diesel.toml  error.rs  full_node.rs  lib.rs  main.rs  peerfinder.rs  protocol.rs  result.rs  server.rs
src/chain/: address.rs  block.rs  digest.rs  gossip.rs  hash_digest.rs  mod.rs  public_key.rs  signature.rs  tx.rs  wallet.rs
src/database/: block.rs  db.rs  generated.rs  mod.rs
src/db/: database.rs  db.rs  mod.rs  raw_block.rs  schema.rs
src/domain/: address.rs  block.rs  digest.rs  error.rs  gossip.rs  mod.rs  wallet.rs
src/network/: connection.rs  full_node.rs  mod.rs  node.rs  protocol.rs  swarm.rs  user_command.rs
src/protocol/: error.rs  frame.rs  mod.rs
src/schema/: block.rs  mod.rs
util/: Cargo.toml
util/src/: consensus.rs  group.rs  group_stream.rs  hash_digest.rs  lib.rs  mine.rs  result.rs  short.rs
