[[bin]] 
name = "main"
path = "src/main.rs"

[package]
name = "bchain"
version = "0.1.0"
authors = ["darkruby <art@darkruby.co.uk>"]
edition = "2021"

[dependencies]
log="0.4"
dotenv="0.15"
structopt = "0.3"
pretty_env_logger = "0.4"
async-std = {version="1.9.0", features=["attributes"]}
bchain-db = { path = "db" }
bchain-util = { path = "util" }
bchain-domain = { path = "chain" }
bchain-network = { path = "network" }

[workspace]
members = [
	"db",
	"chain",
	"network",
	"util",
]