[package]
name = "bchain-db"
version = "0.1.0"
edition = "2018"


[dependencies]
chrono = "0.4"
diesel_migrations = "*"
bchain-domain = { path = "../chain" }
diesel = { version = "1.4.7", features = ["sqlite", "chrono", "numeric"] }
serde = {version="1", features=["derive"]}
serde_json="1.0"

[dev-dependencies]
async-std = {version="1.9.0", features=["attributes"]}