[package]
name = "bchain-db"
version = "0.1.0"
edition = "2018"


[dependencies]
log="0.4"
chrono = "0.4"
serde_json="1.0"
diesel_migrations = "*"
bchain-domain = { path = "../domain" }
bchain-util = { path = "../util" }
serde = {version="1", features=["derive"]}
diesel = { version = "1.4.7", features = ["sqlite", "chrono", "numeric"] }

[dev-dependencies]
async-std = { version="1", features=["attributes"] }
