[package]
name = "bchain-domain"
version = "0.1.0"
edition = "2018"

[dependencies]
rsa="0.5"
hex="0.4"
sha2 = "0.9"
anyhow="1.0"
chrono = "0.4"
bs58 = "0.4"
once_cell="1.8"
byteorder="1.4"
structopt = "0.3"
serde = {version="1", features=["derive"]}
pkcs8={version="0.7", features=["alloc", "pem"]}
bchain-util = { path = "../util" }

[dev-dependencies]
serde_json = "1.0"
async-std = {version="1.9.0", features=["attributes"]}
