[package]
name = "bchain-domain"
version = "0.1.0"
edition = "2018"

[dependencies]
num="0.4"
rsa="0.5"
hex="0.4"
rayon="1.5"
sha2 = "0.9"
anyhow="1.0"
bs58 = "0.4"
chrono = "0.4"
once_cell="1.8"
byteorder="1.4"
itertools="0.10"
async-trait="0.1"
structopt = "0.3"
bchain-util = { path = "../util" }
serde = {version="1", features=["derive"]}
pkcs8 = {version="0.7", features=["alloc", "pem"]}
async-std = {version="1.9.0", features=["attributes"]}

[dev-dependencies]
serde_json = "1.0"
